# Zero-Knowledge-Implementations

./: Cargo.toml  README.md
fiat_shamir_transcript/: Cargo.toml  README.md
fiat_shamir_transcript/src/: fiat_shamir_transcript.rs
gkr/: Cargo.toml
gkr/src/: circuit.rs
multilinear_polynomial/src/: multilinear_polynomial_evaluation.rs
polynomial-utils/: Cargo.toml
polynomial-utils/src/: interpolation.rs  lib.rs  operations.rs  polynomial.rs
polynomial-utils/tests/: interpolation_tests.rs
shamir_secret_sharing/: Cargo.toml  README.md
shamir_secret_sharing/src/: main.rs
src/: main.rs
sum_check_protocol/: Cargo.toml  README.md
sum_check_protocol/src/: main.rs  sum_check_protocol.code-workspace  sumcheck.rs
univariate_polynomial_implementation/: .README.md  .gitignore  Cargo.toml
univariate_polynomial_implementation/dense_representation/: Cargo.toml
univariate_polynomial_implementation/dense_representation/src/: main.rs
univariate_polynomial_implementation/implementation/: Cargo.toml
univariate_polynomial_implementation/implementation/src/: dense_impl.rs  lib.rs  main.rs  sparse_impl.rs
univariate_polynomial_implementation/representation/src/: main.rs
univariate_polynomial_implementation/src/: main.rs
