[package]
name = "gkr"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
multilinear_polynomial ={ path = "../multilinear_polynomial"}
fiat_shamir={path = "../shamir_secret_sharing"}
sum_check ={path = "../sum_check_protocol"}
univariate_polynomial = {path = "../univariate_polynomial_implementation"}